--- a/sidebar.html
+++ b/sidebar.html
@@ -10,7 +10,7 @@
                                 <li><a  class="tabs" href="#11" id="tab-11">1.1 Introduction<br><span class="small"><i class="fa fa-file-video-o"></i> 10 minutes</span></a></li>
                         <li><a class="tabs" href="#12" id="tab-12">1.2 Simple Equations<br><span class="small"><i class="fa fa-file-video-o"></i> 10 minutes</span></a></li>
                                 <li><a class="tabs" href="#13" id="tab-13">1.3 Simple Equations - Quiz<br><span class="small"><i class="fa fa-pencil"></i> 6 questions</span></a></li>
-                                
+                                 <li><a class="tabs" href="#12" id="tab-12">1.4 x On Both Sides<br><span class="small"><i class="fa fa-file-video-o"></i> 10 minutes</span></a></li>
                                 <li><a>1.4 x On Both Sides - Quiz<br><span class="small"><i class="fa fa-pencil"></i> 6 questions</span></a></li>
                             </ul>
                         </li>
